--- a/okile.html
+++ b/okile.html
@@ -244,7 +244,7 @@
 
     <!-- Second part: My Hobbies -->
     <div class="about-right">
-      <h2>Some Hoooobbies</h2>
+      <h2>Some Hoooobbies !!!</h2>
       <div class="hobby">
         <img src="images/okilemountaintop.jpg" alt="Hobby Image 1" class="hobby-img">
         <ul>
