--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
     <title>My Developer Portfolio</title>
-    <link rel="stylesheet" href="okile.css">
+    <link rel="stylesheet" href="style.css">
     
     
 </head>
